--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,7 @@ I became passionate about turning data-driven insights into powerful narratives 
             <span class="logo__text">shrusti ghela</span>
             <span class="logo__cursor" style=
                   "
-                   background-color:#4789c6;
+                   background-color:#ffcf77;
                    ">
             </span>
         
