--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <span class="logo__text">shrusti ghela</span>
             <span class="logo__cursor" style=
                   "
-                   background-color:#4789c6;
+                   background-color:#ffcf77;
                    ">
             </span>
         
