--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
     <main aria-role="main">
         <div>
             
+               <img src="android-chrome-384x384.png" class="circle" alt="" style="max-width:" />
+            
 
             <h1>Hi there!</h1>
 
