--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                <img src="/android-chrome-384x384.png" class="center" alt="" style="max-width:200px" />
             
 
-            <h1 align="center">Hi there!</p align="center">
+            <h1 align="center">Hi there!</h1 align="center">
 
             
     <p>My name is Shrusti (you can also call me Ghela), and I am a Data Scientist!</p>
