--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@ I became passionate about turning data-driven insights into powerful narratives 
 
     <title>
         
-            About :: Hi there! 
+            About 
         
     </title>
 
