--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     
     <div class="footer__inner">
         <div class="footer__content">
-            <span>Let's work together or just get coffee and nerd out on Data!</span>
+            <!-- <span>Let's work together or just get coffee and nerd out on Data!</span> -->
         </div>
     </div>
     
