--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <main aria-role="main">
         <div>
             
-               <img src="/android-chrome-384x384.png" class="center" alt="" style="max-width:200px" />
+               <img src="/potrait.png" class="center" alt="" style="max-width:200px" />
             
 
             <h1 align="center">Hi there!</h1 align="center">
