--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://shrusti-ghela.github.io/about/">About</a></li><li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
+    <ul class="menu__inner"><li><!--<a href="https://shrusti-ghela.github.io/about/">About</a>--></li><li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
     </ul>
 </nav>
 
@@ -135,7 +135,7 @@
 <p>At UW, I am pursuing a master&rsquo;s in Data Science and working as a Text Mining Specialist at the eScience Institute. I collaborate with researchers to solve NLP problems that help create powerful computer systems with the ability to understand human language. How cool is that?</p>
 <p>So that&rsquo;s me! A data junkie who is fascinated by every aspect the Dataverse has to offer, combined with a curiosity to uncover stories and build solutions!</p>
 
-
+<p><img src="https://shrusti-ghela.github.io/hello.jpg" alt="" class="center"></p>
 		
     <!--<p>Let's work together or just get coffee and nerd out on Data!</p>
 
