--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <p>At UW, I am pursuing a master&rsquo;s in Data Science and working as a Text Mining Specialist at the eScience Institute. I collaborate with researchers to solve NLP problems that help create powerful computer systems with the ability to understand human language. How cool is that?</p>
 <p>So that&rsquo;s me! A data junkie who is fascinated by every aspect the Dataverse has to offer, combined with a curiosity to uncover stories and build solutions!</p>
 
-<p><img src="https://shrusti-ghela.github.io/hello.jpg" alt="" class="center"></p>
+<img src="https://shrusti-ghela.github.io/hello.jpg" alt="" class="center">
 		
     <!--<p>Let's work together or just get coffee and nerd out on Data!</p>
 
