--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://shrusti-ghela.github.io/about/">About</a></li><li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
+    <ul class="menu__inner"><!--<li><a href="https://shrusti-ghela.github.io/about/">About</a></li>--><li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
     </ul>
 </nav>
 
