--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
     <meta name="msapplication-TileColor" content="">
 
 
-<meta itemprop="name" content="Hi there!">
-<meta itemprop="description" content="Nice theme for homepages and blogs">
+<meta itemprop="name" content="Shrusti Ghela">
+<meta itemprop="description" content="My name is Shrusti (you can also call me Ghela), and I am a Data Scientist!">
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://shrusti-ghela.github.io/"/>
 
-<meta name="twitter:title" content="Hi there!"/>
-<meta name="twitter:description" content="Nice theme for homepages and blogs"/>
+<meta name="twitter:title" content="Shrusti Ghela"/>
+<meta name="twitter:description" content="My name is Shrusti (you can also call me Ghela), and I am a Data Scientist!"/>
 
 
 
-    <meta property="og:title" content="Hi there!" />
-<meta property="og:description" content="Nice theme for homepages and blogs" />
+    <meta property="og:title" content="Shrusti Ghela" />
+<meta property="og:description" content="My name is Shrusti (you can also call me Ghela), and I am a Data Scientist!" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shrusti-ghela.github.io/" /><meta property="og:image" content="https://shrusti-ghela.github.io/"/>
 
