--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            Unsupervised Learning Approaches for Dimensionality Reduction and Data Visualization :: Hi there! 
+            Unsupervised Learning Approaches for Dimensionality Reduction and Data Visualization
         
     </title>
 
