--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
     </div>
     <div class="footer__inner">
         <div class="footer__content">
+	<span><link rel="icon" type="image/png" sizes="16x16" href="https://shrusti-ghela.github.io/favicon-16x16.png"> </span>
+		
+
             <span>&copy; 2022</span>
             <span><a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a></span>
             
