--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <div class="footer__inner">
         <div class="footer__content">
-	<span> &nbsp; <link rel="icon" type="image/png" sizes="16x16" href="https://shrusti-ghela.github.io/favicon-16x16.png"> &nbsp;</span>
+	<span> <img src="https://shrusti-ghela.github.io/favicon-16x16.png" width=24> </span>
 		
 
             <span>&copy; 2022</span>
