--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <div class="footer__inner">
         <div class="footer__content">
-	<span> <img src="https://shrusti-ghela.github.io/favicon-16x16.png" width=24> </span>
+	<span> <a href="https://shrusti-ghela.github.io/"><img src="https://shrusti-ghela.github.io/favicon-32x32.png" width=24/> </a></span>
 		
 
             <span>&copy; 2022</span>
