--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <div class="footer__inner">
         <div class="footer__content">
-	<span> <a href="https://shrusti-ghela.github.io/"><img src="https://shrusti-ghela.github.io/favicon-32x32.png" width=24/> </a></span>
+	 <a href="https://shrusti-ghela.github.io/"><img src="https://shrusti-ghela.github.io/android-chrome-384x384.png" width=24/> </a>
 		
 
             <span>&copy; 2022</span>
