--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="footer__inner">
         <div class="footer__content">
 		<span>
-	 &nbsp; <a href="https://shrusti-ghela.github.io/"><img src="https://shrusti-ghela.github.io/android-chrome-384x384.png" width=24> </a> &nbsp;&nbsp; &copy; 2022 &nbsp;&nbsp; <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
+	 &nbsp; <a href="https://shrusti-ghela.github.io/"><img src="https://shrusti-ghela.github.io/potrait.png" width=24> </a> &nbsp;&nbsp; &copy; 2022 &nbsp; <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
 		</span>
             
             
