--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="footer__inner">
         <div class="footer__content">
 		<span>
-	 <div class = "inline-block"><a href="https://shrusti-ghela.github.io/" class = "inline-block"><img src="https://shrusti-ghela.github.io/potrait.png" width=24> </a> </div> &nbsp; &copy; 2022 &nbsp; <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
+	 <div class = "inline-block"><a href="https://shrusti-ghela.github.io/" class = "inline-block"><img src="https://shrusti-ghela.github.io/potrait.png" width=24> </a> </div> &copy; 2022 <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
 		</span>
             
             
