--- a/404.html
+++ b/404.html
@@ -102,7 +102,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://shrusti-ghela.github.io/about/">About</a></li><li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
+    <ul class="menu__inner"><!-- <li><a href="https://shrusti-ghela.github.io/about/">About</a></li> --> <li><a href="https://medium.com/@shrustighela">Blogs</a></li><li><a href="https://shrusti-ghela.github.io/projects/">Projects</a></li><li><a href="https://drive.google.com/file/d/1xYglhSJX7ggog4jns-kr6r3B1QH4BHg6/view?usp=sharing">Resume</a></li>
     </ul>
 </nav>
 
@@ -126,10 +126,10 @@
             <div class="content">
                 
     <div id="spotlight" class="error-404 animated fadeIn">
-        <img src="https://shrusti-ghela.github.io/404.png" class="center">
-        <p class="img-404">
+        <img src="https://shrusti-ghela.github.io/404.png" class="center" style="max-width:200px">
+        <!-- <p class="img-404">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-cloud-drizzle"><line x1="8" y1="19" x2="8" y2="21"></line><line x1="8" y1="13" x2="8" y2="15"></line><line x1="16" y1="19" x2="16" y2="21"></line><line x1="16" y1="13" x2="16" y2="15"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="12" y1="15" x2="12" y2="17"></line><path d="M20 16.58A5 5 0 0 0 18 7h-1.26A8 8 0 1 0 4 15.25"></path></svg>
-        </p>
+        </p> -->
         <div class="banner-404">
             <h1>404</h1>
             <p>Oops, page not found…</p>
