--- a/projects/index.html
+++ b/projects/index.html
@@ -254,7 +254,7 @@
     <div class="footer__inner">
         <div class="footer__content">
 		<span>
-            	 <div class = "inline-block"><a href="https://shrusti-ghela.github.io/" class = "inline-block"><img src="https://shrusti-ghela.github.io/potrait.png" width=24> </a> </div> &copy; 2022 <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
+            	 <div class = "inline-block"><a href="https://shrusti-ghela.github.io/" class = "inline-block"><img src="https://shrusti-ghela.github.io/footer.png" width=24> </a> </div> &copy; 2022 <a href="https://shrusti-ghela.github.io/">Shrusti Ghela</a>
 		</span>
             
             
