--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
 <link rel="canonical" href="https://shrusti-ghela.github.io/" />
+	    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W7ETT6H262"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W7ETT6H262');
+</script>
+
 
 
     <title>
