--- a/projects/project6/index.html
+++ b/projects/project6/index.html
@@ -175,6 +175,30 @@
 
             </div>
 
+		<div class="pagination">
+
+
+        <div class="pagination__buttons">
+
+            <span class="button previous">
+                <a href="https://shrusti-ghela.github.io/projects/project2/">
+                    <span class="button__icon">←</span>
+                    <span class="button__text">Mind Reading using AI</span>
+                </a>
+            </span>
+
+
+
+            <span class="button next">
+                <a href="https://shrusti-ghela.github.io/projects/project5/">
+                    <span class="button__text">The Pacman Projects</span>
+                    <span class="button__icon">→</span>
+                </a>
+            </span>
+
+        </div>
+    </div>
+
             
                             
                 <footer class="footer">
