--- a/projects/index.html
+++ b/projects/index.html
@@ -186,6 +186,7 @@
                                         May 16
                                     
                                 </span>
+				<img src="https://shrusti-ghela.github.io/pacman.gif" alt="" class="center">    
                             </a>
                         </li>
                     
