--- a/projects/index.html
+++ b/projects/index.html
@@ -154,7 +154,7 @@
                                     
                                 </span>
                             </a>
-				<div class = "inline-block" class="center"><img src="https://shrusti-ghela.github.io/snowex.png" alt="" style="max-width:200px"><img src="https://shrusti-ghela.github.io/group.jpeg" alt="" style="max-width:200px"> </div>
+				<div class = "inline-block"><img src="https://shrusti-ghela.github.io/snowex.png" alt="" style="max-width:200px"><img src="https://shrusti-ghela.github.io/group.jpeg" alt="" style="max-width:200px"> </div>
                         <br>
 			</li>
                     
