--- a/projects/index.html
+++ b/projects/index.html
@@ -154,9 +154,9 @@
                                     
                                 </span>
                             </a>
-				<span>
-				<div class = "inline-block"><img src="https://shrusti-ghela.github.io/snowex.png" alt="" style="max-width:200px"><img src="https://shrusti-ghela.github.io/group.jpeg" alt="" style="max-width:200px"> </div>
-				</span>
+				<!-- <span> -->
+				<div class = "inline-block"><img src="https://shrusti-ghela.github.io/snowex.png" alt="" style="max-width:200px"></div> <div class = "inline-block"><img src="https://shrusti-ghela.github.io/group.jpeg" alt="" style="max-width:200px"> </div>
+				<!-- </span> -->
 					<br>
 			</li>
                     
