--- a/projects/index.html
+++ b/projects/index.html
@@ -239,6 +239,7 @@
     </main>
 
             </div>
+		<img src="https://shrusti-ghela.github.io/proj.png" alt="" class="center" style="max-width:200px">
 
             
                 <footer class="footer">
