--- a/about/index.html
+++ b/about/index.html
@@ -166,8 +166,11 @@ I became passionate about turning data-driven insights into powerful narratives 
 <p>Hi there!</p>
 <p>My name is Shrusti (you can also call me Ghela), and I am a Data Scientist!</p>
 <p>I have always been a math geek, and this love for math, solving puzzles, and finding patterns led me to do engineering during my UG days. I studied IT at the Vellore Institute of Technology, and this is where I learned to combine my love for patterns with data.</p>
-<p>I became passionate about turning data-driven insights into powerful narratives and stories. This passion triggered my next jump to the University of Washington.</p>
-<p>At UW, I am pursuing a master&rsquo;s in Data Science and working as a Text Mining Specialist at the eScience Institute. I collaborate with researchers to solve NLP problems that help create powerful computer systems with the ability to understand human language. How cool is that?</p>
+<!--<p>I became passionate about turning data-driven insights into powerful narratives and stories. This passion triggered my next jump to the University of Washington.</p>-->
+<p>I became passionate about turning data-driven insights into powerful narratives and stories. This passion triggered my next jump to the University of Washington. At UW, I completed a master's in Data Science and worked as a Text Mining Specialist at the eScience Institute. I collaborated with researchers to solve NLP problems that helped create powerful computer systems with the ability to understand human language. How cool is that? </p>
+<p> Currently, I am a Data Science intern at Constellation Software Inc., where I solve problems using data. </p>
+
+<!--<p>At UW, I am pursuing a master&rsquo;s in Data Science and working as a Text Mining Specialist at the eScience Institute. I collaborate with researchers to solve NLP problems that help create powerful computer systems with the ability to understand human language. How cool is that?</p>-->
 <p>So that&rsquo;s me! A data junkie who is fascinated by every aspect the Dataverse has to offer, combined with a curiosity to uncover stories and build solutions!</p>
 <p><img src="https://shrusti-ghela.github.io/hello.jpg" alt="" class="center"></p>
             </div>
